# Concrete_crack_segmentation

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  commands.md  infer.py  pyproject.toml  train.py
conf/: config.yaml
conf/logging/: logging.yaml
conf/model/: model.yaml
conf/testing/: testing.yaml
conf/training/: training.yaml
data/: .gitignore  data.csv.dvc  dataset_huizong_1.dvc
scripts/: download_data.py
utils/: dataset.py  model_selector.py  trainer.py
