[tool.poetry]
name = "Concrete_crack_segmentation"
version = "0.1.0"
description = "Сегментация трещин в бетоне"
authors = ["Admiral76 <Admiral76rus@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.5.1+cu121", source = "pytorch-gpu"}
torchvision = {version = "^0.20.1+cu121", source = "pytorch-gpu"}
fire = "^0.7.0"
pandas = "^2.2.3"
pytorch-lightning = "^2.5.0.post0"
pillow = "^11.0.0"
kagglehub = "^0.3.6"
segmentation-models-pytorch = "^0.3.4"
albumentations = "^1.4.24"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mlflow = "^2.19.0"

[tool.isort]
src_paths = ["."]
profile = "black"
line_length = 90
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
